--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
+  box-sizing: 0;
   margin: 0;
+  border:0;
+  box-sizing: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
